--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Texas Hold'em Perlch</title>
+    <title>Texas Hold'em Simulator</title>
     <style>
         body {
             background-color: #1a1a1a;
@@ -30,7 +30,6 @@
         .poker-table {
             width: 100%;
             max-width: 900px;
-            /* Увеличили высоту через соотношение сторон (было 850/420) */
             aspect-ratio: 900 / 550; 
             background: radial-gradient(circle, #2e7d32 0%, #1b5e20 100%);
             border: 1.5vw solid #3e2723;
@@ -39,7 +38,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-evenly; /* Распределяем элементы равномерно по высоте */
+            justify-content: space-evenly;
             box-shadow: inset 0 0 80px rgba(0,0,0,0.6), 0 25px 60px rgba(0,0,0,0.8);
             padding: 40px 0;
         }
@@ -144,7 +143,6 @@
             box-shadow: 0 2px #b88b00;
         }
 
-        /* Адаптивность для маленьких экранов */
         @media (max-width: 900px) {
             .card {
                 width: 8vw;
@@ -161,17 +159,14 @@
 
     <div class="poker-table-wrapper">
         <div class="poker-table">
-            
             <div class="community-area">
                 <div class="label">Community Cards</div>
                 <div class="community-cards" id="board"></div>
             </div>
-
             <div class="player-area">
                 <div class="label">Your Hand</div>
                 <div class="player-hand" id="hero"></div>
             </div>
-
         </div>
     </div>
 
@@ -218,5 +213,4 @@
         window.onload = deal;
     </script>
 </body>
-  </html>
-  
+</html>
